--- a/index.html
+++ b/index.html
@@ -33,64 +33,68 @@
 <body>
 
   <header>
-    <div class="logo">
-      <img src="pictures/logo.png" alt="IRE">
-    </div>
-    <nav class="main-menu">
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="presentation.html">Présentation</a></li>
-        <li><a href="agenda.html">Agenda</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="dans-la-presse.html">Dans la presse</a></li>
+      <div class="logo">
+        <img  src="pictures/logo.png" alt="IRE">
+      </div>
+        <nav class="main-menu">
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="presentation.html">Présentation</a></li>
+          <li><a href="agenda.html">Agenda</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="dans-la-presse.html">Dans la presse</a></li>
       </ul>
     </nav>
+  
     <div class="titre">
       <h1>I.R.E.</h1>
       <h2>Institut Recherche Environnement</h2>
       <h3>Le meilleur de la science au service de la terre</h3>
     </div>
   </header>
-  <div class="conteneur"></div>
-    <section h2>Une dizaine de militaire armées</h2>
-      <div class="bg mx-3">
-      <img src="pictures/contenu-img-1.jpg" alt="paysage1">
+  <main>
+      <div class="conteneur">
+        <div >
+        <img class="paysage" src="pictures/contenu-img-1.jpg" alt="paysage1">
       </div>
-
-      <p>Antoine Deellec, le 27 avril 2025</p>
-      <p>Il allait peut-être perdre Florence
-      avant même de lui avoir avoué son amour.
-      Il devait empêcher Prélude de continuer dans son délire.
-      Mais comment pouvait-il stopper ce parasite créé par lui quelques années auparavant? </p>
-    </section>
-    <main>
-      <div class="bg mx-6">
-        <img src="pictures/contenu-img-2.jpg" alt="paysage1">
+      <div class="armées">
+        <h2>Une dizaine de militaire armées</h2>
+        <p>Antoine Deellec, le 27 avril 2025</p>
+        <p >Il allait peut-être perdre Florence
+        avant même de lui avoir avoué son amour.
+        Il devait empêcher Prélude de continuer dans son délire.
+        Mais comment pouvait-il stopper ce parasite créé par lui quelques années auparavant? </p>
+      </div>
+      <div class="vignettes" >
+        <img class="photos" alt="dessert" src="pictures/product-01.png">
+        <a href="Gougères.html">Rapport annuel 2017</a></div>
+      </div>
+    <div class="conteneur">
+      <div>
+        <img class="paysage" src="pictures/contenu-img-2.jpg" alt="paysage2">
+      </div>
+      <div class="armées">
         <h2>Informaticienne chevronnée</h2>
         <p>Antoine Deellec, le 27 avril 2025</p>
         <p>Il allait peut-être perdre Florence avant même de lui avoir avoué son amour.
         Il devait empêcher
         Prélude de continuer dans son délire. Mais comment pouvait-il stopper ce parasite créé par lui quelques années
         auparavant? </p>
+        </div>
+        <div class="vignettes">
+          <img class="photos" alt="pésentation" src="/pictures/product-01.png">
+          <a href="Table.html">Table anonyme</a>
+        </div>      
       </div>
     </main>
     <article>
-      <img src="pictures/saut.jpg" alt="paysage3">
-      <img src="pictures/book-01.jpg" alt="bois">
-      <img src="pictures/book-02.jpg" alt="sable">
-      <img src="pictures/book-03.jpg" alt="rivière">
-      <img src="pictures/book-04.jpg" alt="pierre">
+      <img class="paysage3" src="pictures/saut.jpg" alt="paysage3">
+      <img class="book" src="pictures/book-01.jpg" alt="bois">
+      <img class="book" src="pictures/book-02.jpg" alt="sable">
+      <img class="book" src="pictures/book-03.jpg" alt="rivière">
+      <img class="book" src="pictures/book-04.jpg" alt="pierre">
     </article>
-    <aside>
-      <hr>
-      <div class="vignettes">
-        <img class="photos" alt="dessert" src="pictures/product-01.png">
-        <a href="Gougères.html">Rapport annuel 2017</a></div>
-      <div class="vignettes">
-        <img class="photos" alt="pésentation" src="/pictures/product-01.png">
-        <a href="Table.html">Table anonyme</a>
-        </div>
-    </aside>
+   
     <div class="clear"></div>
   </div>
 
