--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 <body>
 
   <header>
-      <div class="logo">
-        <img  src="pictures/logo.png" alt="IRE">
-      </div>
-        <nav class="main-menu">
-        <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="presentation.html">Présentation</a></li>
-          <li><a href="agenda.html">Agenda</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="dans-la-presse.html">Dans la presse</a></li>
+    <div class="logo">
+      <img src="pictures/logo.png" alt="IRE">
+    </div>
+    <nav class="main-menu">
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="presentation.html">Présentation</a></li>
+        <li><a href="agenda.html">Agenda</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="dans-la-presse.html">Dans la presse</a></li>
       </ul>
     </nav>
-  
+
     <div class="titre">
       <h1>I.R.E.</h1>
       <h2>Institut Recherche Environnement</h2>
@@ -53,49 +53,51 @@
     </div>
   </header>
   <main>
-      <div class="conteneur">
-        <div >
+    <div class="conteneur">
+      <div>
         <img class="paysage" src="pictures/contenu-img-1.jpg" alt="paysage1">
       </div>
       <div class="armées">
         <h2>Une dizaine de militaire armées</h2>
         <p>Antoine Deellec, le 27 avril 2025</p>
-        <p >Il allait peut-être perdre Florence
-        avant même de lui avoir avoué son amour.
-        Il devait empêcher Prélude de continuer dans son délire.
-        Mais comment pouvait-il stopper ce parasite créé par lui quelques années auparavant? </p>
+        <p>Il allait peut-être perdre Florence
+          avant même de lui avoir avoué son amour.
+          Il devait empêcher Prélude de continuer dans son délire.
+          Mais comment pouvait-il stopper ce parasite créé par lui quelques années auparavant? </p>
       </div>
-      <div class="vignettes" >
-        <img class="photos" alt="dessert" src="pictures/product-01.png">
-        <a href="Gougères.html">Rapport annuel 2017</a></div>
+      <div class="vignettes">
+        <a href="Gougères.html"></a><img class="photos" alt="dessert" src="pictures/product-01.png">
+        <span>Rapport annuel 2017</span></a>
       </div>
-    <div class="conteneur">
-      <div>
-        <img class="paysage" src="pictures/contenu-img-2.jpg" alt="paysage2">
-      </div>
-      <div class="armées">
-        <h2>Informaticienne chevronnée</h2>
-        <p>Antoine Deellec, le 27 avril 2025</p>
-        <p>Il allait peut-être perdre Florence avant même de lui avoir avoué son amour.
-        Il devait empêcher
-        Prélude de continuer dans son délire. Mais comment pouvait-il stopper ce parasite créé par lui quelques années
-        auparavant? </p>
+    </div>
+      <div class="conteneur">
+        <div>
+          <img class="paysage" src="pictures/contenu-img-2.jpg" alt="paysage2">
+        </div>
+        <div class="armées">
+          <h2>Informaticienne chevronnée</h2>
+          <p>Antoine Deellec, le 27 avril 2025</p>
+          <p>Il allait peut-être perdre Florence avant même de lui avoir avoué son amour.
+            Il devait empêcher
+            Prélude de continuer dans son délire. Mais comment pouvait-il stopper ce parasite créé par lui quelques
+            années
+            auparavant? </p>
         </div>
         <div class="vignettes">
-          <img class="photos" alt="pésentation" src="/pictures/product-01.png">
-          <a href="Table.html">Table anonyme</a>
-        </div>      
+          <a href="Table.html"><img class="photos" alt="pésentation" src="/pictures/product-01.png">
+          <span>Table anonyme</span></a>
+        </div>
       </div>
-    </main>
-    <article>
-      <img class="paysage3" src="pictures/saut.jpg" alt="paysage3">
-      <img class="book" src="pictures/book-01.jpg" alt="bois">
-      <img class="book" src="pictures/book-02.jpg" alt="sable">
-      <img class="book" src="pictures/book-03.jpg" alt="rivière">
-      <img class="book" src="pictures/book-04.jpg" alt="pierre">
-    </article>
-   
-    <div class="clear"></div>
+  </main>
+  <article>
+    <img class="paysage3" src="pictures/saut.jpg" alt="paysage3">
+    <img class="book" src="pictures/book-01.jpg" alt="bois">
+    <img class="book" src="pictures/book-02.jpg" alt="sable">
+    <img class="book" src="pictures/book-03.jpg" alt="rivière">
+    <img class="book" src="pictures/book-04.jpg" alt="pierre">
+  </article>
+
+  <div class="clear"></div>
   </div>
 
   <!-- Bootstrap JavaScript -->
